demenchuk/examples/errors/lexer/01_invalid_char.riv
# LEXER ERROR: Недопустимый символ
# Ожидаемая ошибка: Invalid character '@' at line 4

x = 10
y = 20
# Недопустимый символ $ в идентификаторе
z$ = 30
result = x + y
